lintian (2.2.13) UNRELEASED; urgency=low

  * checks/patch-systems:
    + [RA] Don't include the package name as extra data in tags that are
      only issued for source packages.  Patch from Raphael Geissert.

  * collection/strings:
    + [ADB] Handle the fact that, when Lintian is run as root, the output of
      "file" on set[gu]id files may include the fact that they are set[gu]id.
      Thanks, Peter Pentchev.  (Closes: #533618)

  * lib/Spelling.pm:
    + [RA] Add changes misspelling.
    + [RA] Fix correction for endianness.  Thanks, Raphael Geissert.

 -- Adam D. Barratt <adam@adam-barratt.org.uk>  Fri, 19 Jun 2009 19:11:28 +0100

lintian (2.2.12) unstable; urgency=low

  The "Policy 3.8.2" release.
  
  * Summary of tag changes:
    + Added:
      - debug-symbols-directly-in-usr-lib-debug
      - dh_desktop-is-deprecated
      - dh_scrollkeeper-is-deprecated
      - file-in-discouraged-x11-font-directory
      - file-in-unknown-x11-font-directory
      - init.d-script-sourcing-without-test
      - init.d-script-uses-usr-interpreter
      - missing-separator-between-items
      - package-contains-multiple-dpi-fonts
      - package-mixes-misc-and-dpi-fonts
    + Removed:
      - missing-comma-between-items
      
  * checks/binaries{,.desc}:
    + [RA] Diagnose installing detached debugging symbols directly in
      /usr/lib/debug instead of in an appropriate subdirectory.  Patch
      from Raphael Geissert.  (Closes: #532394)
  * checks/control-file{,.desc}:
    + [ADB] Allow both comma and pipe as valid separators between items when
      detecting whether a separator has been omitted.  As a consequence,
      rename the missing-comma-between-items tag to the more descriptive
      missing-separator-between-items.  Based on a patch by Rafael
      Laboissiere.  (Closes: #533202)
    + [RA] Allow a newline immediately after the field name, since this
      does work with fields that can be wrapped (such as Build-Depends).