@@ -1,0 +1,6 @@
+Testname: cruft-updated-libtool
+Sequence: 6000
+Version: 1.0
+Description: Old ltmain.sh/ltconfig is fine with build-depend
+Test-Against: ancient-libtool
+References: Debian Bug#534134
