@@ -1,5 +1,8 @@
 lintian (2.2.13) UNRELEASED; urgency=low
 
+  * checks/cruft:
+    + [RA] Don't warn about outdated libtool if the package build-depends
+      on libtool.  Thanks, Kurt Roeckx.  (Closes: #534134)
   * checks/patch-systems:
     + [RA] Don't include the package name as extra data in tags that are
       only issued for source packages.  Patch from Raphael Geissert.
